--- a/chess.conf
+++ b/chess.conf
@@ -164,8 +164,8 @@ Include ports.conf
 <VirtualHost *:80>
     ServerAdmin localhost@shadowflade.com
     DocumentRoot "/var/www/html"
-    ServerName localhost
-    ServerAlias localhost
+    ServerName chess
+    ServerAlias chess.com
     ErrorLog "logs/thegeekstuff/error_log"
     CustomLog "logs/thegeekstuff/access_log" common
 </VirtualHost>
@@ -236,3 +236,4 @@ LogFormat "%{User-agent}i" agent
 # IncludeOptional ./*.conf
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
+ServerName 127.0.0.1
